--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.5",
     "@clerk/nextjs": "^5.0.6",
     "@hookform/resolvers": "^3.3.4",
     "@ngrok/ngrok": "^1.2.0",
@@ -29,11 +30,13 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
     "@uploadcare/blocks": "0.38.2",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.1.7",
+    "googleapis": "^137.1.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -44,6 +47,7 @@
     "react-resizable-panels": "^2.0.19",
     "reactflow": "^11.11.3",
     "sonner": "^1.4.41",
+    "stripe": "^15.6.0",
     "svix": "^1.23.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
